Added: Find Event by ID
