# backend/docs/swagger.yaml
@@ -132,6 +132,35 @@ paths:
       summary: Delete an event
       tags:
       - events
+    get:
+      parameters:
+      - description: Event ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Event'
+        "400":
+          description: Invalid event id
+          schema:
+            type: object
+        "404":
+          description: Event not found
+          schema:
+            type: object
+        "500":
+          description: Internal error
+          schema:
+            type: object
+      summary: Get an event by ID with its participants
+      tags:
+      - events
     put:
       consumes:
       - application/json
